Move the 'Flight details' and 'pay now' button up to avoid redirection to another website

--- a/public/ambulance/assets/css/main.css
+++ b/public/ambulance/assets/css/main.css
@@ -302,3 +302,10 @@
 #s section.s_right {  
   width: 25%;
 }
+
+.final-amount {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
